richard meeting